tests/snapshots/scripts_sanitized/fmSyntaxColorizer/Example SyntaxColorizing - ID 46/All script steps sorted by ID - ID 151.txt.snap
---
source: src/main.rs
expression: output_content
---
Script ausführen [ Aus Liste ; "All script steps sorted by ID" ]
# Command ID 2 <unknown>
# Command ID 3 <unknown>
Gehe zu nächstem Feld
Gehe zu vorherigem Feld
Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
Neuer Datensatz/Abfrage
Datensatz/Abfrage duplizieren
Datensatz/Abfrage löschen [ Mit Dialog: ON ]
Alle Datensätze löschen [ Mit Dialog: ON ]
Aus Index einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "11" ] ⚠️⚠️⚠️
Aus zuletzt geöffnetem Satz einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "12" ] ⚠️⚠️⚠️
Systemdatum einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "13" ] ⚠️⚠️⚠️
Systemuhrzeit einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "14" ] ⚠️⚠️⚠️
# Command ID 15 <unknown>
Gehe zu Datens./Abfrage/Seite [ Erste(r) ]
Gehe zu Feld []
Nur Auswahl prüfen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "18" ] ⚠️⚠️⚠️
Aktuellen Datensatz prüfen
Ganze Ergebnismenge prüfen
Sortierung aufheben
Suchenmodus aktivieren [ Pause: OFF ]
Alle Datensätze anzeigen
Letzte Suche ändern
Aktuellen Datens. ausschließen
Mehrere ausschließen [ Mit Dialog: ON ]
Nur Ausgeschlossene anzeigen
Ergebnismenge suchen
Werkzeugleisten ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "29" ] ⚠️⚠️⚠️
Datensätze zeigen als ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "30" ] ⚠️⚠️⚠️
Fenster anpassen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "31" ] ⚠️⚠️⚠️
Hilfe
Datei öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "33" ] ⚠️⚠️⚠️
Datei schließen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "34" ] ⚠️⚠️⚠️
Datensätze importieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "35" ] ⚠️⚠️⚠️
Datensätze exportieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "36" ] ⚠️⚠️⚠️
Kopie speichern unter ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "37" ] ⚠️⚠️⚠️
Datenbank verwalten
Sortieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "39" ] ⚠️⚠️⚠️
Referenzwerte holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "40" ] ⚠️⚠️⚠️
Seitenansichtsmodus aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "41" ] ⚠️⚠️⚠️
Drucker einrichten ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "42" ] ⚠️⚠️⚠️
Drucken ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "43" ] ⚠️⚠️⚠️
Programm beenden
Rückgängig/Wiederholen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "45" ] ⚠️⚠️⚠️
Ausschneiden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "46" ] ⚠️⚠️⚠️
Kopieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "47" ] ⚠️⚠️⚠️
Einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "48" ] ⚠️⚠️⚠️
Löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "49" ] ⚠️⚠️⚠️
Alles auswählen
Verwerfe Änderung Datens./Abfrage ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "51" ] ⚠️⚠️⚠️
# Command ID 52 <unknown>
# Command ID 53 <unknown>
# Command ID 54 <unknown>
Blätternmodus aktivieren
Bild einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "56" ] ⚠️⚠️⚠️
Event senden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "57" ] ⚠️⚠️⚠️
# Command ID 58 <unknown>
QuickTime einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "59" ] ⚠️⚠️⚠️
Benutzernamen einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "60" ] ⚠️⚠️⚠️
Text einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "61" ] ⚠️⚠️⚠️
Scriptpause setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "62" ] ⚠️⚠️⚠️
E-Mail senden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "63" ] ⚠️⚠️⚠️
DDE Execute senden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "64" ] ⚠️⚠️⚠️
Telefonnummer wählen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "65" ] ⚠️⚠️⚠️
Sprechen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "66" ] ⚠️⚠️⚠️
AppleScript ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "67" ] ⚠️⚠️⚠️
Wenn [  ]
Sonst
Ende (wenn)
Schleife (Anfang)
	Verlasse Schleife wenn [  ]
Schleife (Ende)
Gehe zu Bezugsdatensatz ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "74" ] ⚠️⚠️⚠️
Schreibe Änderung Datens./Abfrage [ Mit Dialog: ON ]
Feldwert setzen [  ;  ]
Berechneten Wert einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "77" ] ⚠️⚠️⚠️
Objekt einfügen (Windows OLE) ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "78" ] ⚠️⚠️⚠️
Fenster fixieren
Fenster aktualisieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "80" ] ⚠️⚠️⚠️
Fenster rollen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "81" ] ⚠️⚠️⚠️
Neue Datei
Passwort ändern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "83" ] ⚠️⚠️⚠️
Netzwerkzugriff einstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "84" ] ⚠️⚠️⚠️
AnwenderAbbruchZulassen setzen [ OFF ]
Fehleraufzeichnung setzen [ ON ]
Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
Scriptarbeitsbereich öffnen
# Comment
Alle Scripts abbrechen
Ersetze alle Feldwerte [ Mit Dialog: ON ; Aktueller Inhalt ]
Textlineal ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "92" ] ⚠️⚠️⚠️
Fehlerton
SystemformateVerwenden setzen [ ON ]
Datei wiederherstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "95" ] ⚠️⚠️⚠️
Kopie speichern als Add-on-Paket ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "96" ] ⚠️⚠️⚠️
Zoomstufe setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "97" ] ⚠️⚠️⚠️
Alle Datens./Abfragen kopieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "98" ] ⚠️⚠️⚠️
Gehe zu Ausschnittreihe [ Auswahl: ON ; Erste(r) ]
# Command ID 100 <unknown>
Datensatz/Abfrage kopieren
Cache auf Platte ablegen
Aktuelles Script verlassen []
Ausschnittreihe löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "104" ] ⚠️⚠️⚠️
Einstellungen
Wort korrigieren
Dateioptionen - Rechtschreibung
Wörterbücher wählen
Anwenderwörterbuch bearbeiten
Wenn [ /* Command ID 110 <unknown> - but command 125, else if, has to be inside an if to be legal*/ ]
	URL öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "111" ] ⚠️⚠️⚠️
	Wertelisten verwalten
	Sharing - FileMaker Netzwerk
	Dateioptionen
	Formatierungsleiste zulassen [ OFF ]
	Nächste fortlaufende Nummer setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "116" ] ⚠️⚠️⚠️
	SQL ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "117" ] ⚠️⚠️⚠️
	Hosts öffnen
	Fensterposition/-größe ändern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "119" ] ⚠️⚠️⚠️
	Alle Fenster anordnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "120" ] ⚠️⚠️⚠️
	Fenster schließen
	Neues Fenster [ Style: Dokument ; Layout: <Originallayout> ]
	Fenster aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "123" ] ⚠️⚠️⚠️
	Fenstertitel setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "124" ] ⚠️⚠️⚠️
Sonst, wenn [  ]
	Ergebnismenge einschränken
	Ergebnismenge erweitern
	Suchen/Ersetzen ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "128" ] ⚠️⚠️⚠️
	Suchen/Ersetzen
	Auswahl festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "130" ] ⚠️⚠️⚠️
	Datei einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "131" ] ⚠️⚠️⚠️
	Exportiere alle Feldwerte ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "132" ] ⚠️⚠️⚠️
	Datensatz/Abfrage öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "133" ] ⚠️⚠️⚠️
	Konto hinzufügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "134" ] ⚠️⚠️⚠️
	Konto löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "135" ] ⚠️⚠️⚠️
	Kontopasswort zurücksetzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "136" ] ⚠️⚠️⚠️
	Konto aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "137" ] ⚠️⚠️⚠️
	Erneut anmelden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "138" ] ⚠️⚠️⚠️
	Datei konvertieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "139" ] ⚠️⚠️⚠️
	Datenquellen verwalten
	Variable setzen [ $Command ; "whatever" ]
	Menüset installieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "142" ] ⚠️⚠️⚠️
	Datensätze als Excel speichern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "143" ] ⚠️⚠️⚠️
	Datensätze als PDF speichern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "144" ] ⚠️⚠️⚠️
	Gehe zu Objekt []
	Web Viewer festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "146" ] ⚠️⚠️⚠️
	Feld nach Namen einstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "147" ] ⚠️⚠️⚠️
	BeiTimer-Script installieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "148" ] ⚠️⚠️⚠️
	Gespeicherte Suchen bearbeiten
	Schnellsuche durchführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "150" ] ⚠️⚠️⚠️
	Layouts verwalten
	Datensätze als Snapshot-Link speichern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "152" ] ⚠️⚠️⚠️
	&lt;Unbekannt&gt; [153] ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "153" ] ⚠️⚠️⚠️
	Datensätze nach Feld sortieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "154" ] ⚠️⚠️⚠️
	Übereinst. Datensätze suchen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "155" ] ⚠️⚠️⚠️
	Container verwalten
	Plugin-Datei installieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "157" ] ⚠️⚠️⚠️
	PDF einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "158" ] ⚠️⚠️⚠️
	Audio/Video einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "159" ] ⚠️⚠️⚠️
	Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
	Von Gerät einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "161" ] ⚠️⚠️⚠️
	&lt;Unbekannt&gt; [162] ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "162" ] ⚠️⚠️⚠️
	&lt;Unbekannt&gt; [163] ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "163" ] ⚠️⚠️⚠️
	Script auf Server ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "164" ] ⚠️⚠️⚠️
	Designs verwalten
	Menüleiste ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "166" ] ⚠️⚠️⚠️
	Objekt aktualisieren []
	Layoutobjekt-Animation festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "168" ] ⚠️⚠️⚠️
	Popover schließen
	&lt;Unbekannt&gt; [170] ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "170" ] ⚠️⚠️⚠️
	&lt;Unbekannt&gt; [171] ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "171" ] ⚠️⚠️⚠️
	Auf Host hochladen
	&lt;Unbekannt&gt; [173] ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "173" ] ⚠️⚠️⚠️
	Touch-Tastatur aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "174" ] ⚠️⚠️⚠️
	JavaScript in Web Viewer ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "175" ] ⚠️⚠️⚠️
	Zulässige Ausrichtungen festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "176" ] ⚠️⚠️⚠️
	AVPlayer - Wiedergabe ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "177" ] ⚠️⚠️⚠️
	AVPlayer-Wiedergabestatus festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "178" ] ⚠️⚠️⚠️
	AVPlayer - Optionen festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "179" ] ⚠️⚠️⚠️
	Ausschnitt aktualisieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "180" ] ⚠️⚠️⚠️
	Ordnerpfad holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "181" ] ⚠️⚠️⚠️
	Tabelle leeren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "182" ] ⚠️⚠️⚠️
	Favoriten öffnen
	Open Starter Solution ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "184" ] ⚠️⚠️⚠️
	Regionsmonitor-Script konfigurieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "185" ] ⚠️⚠️⚠️
	MBS ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "186" ] ⚠️⚠️⚠️
	Lokale Benachrichtigung konfigurieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "187" ] ⚠️⚠️⚠️
	Dateiexistenz holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "188" ] ⚠️⚠️⚠️
	Dateigröße holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "189" ] ⚠️⚠️⚠️
	Datendatei erstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "190" ] ⚠️⚠️⚠️
	Datendatei öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "191" ] ⚠️⚠️⚠️
	In Datendatei schreiben ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "192" ] ⚠️⚠️⚠️
	Von Datendatei lesen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "193" ] ⚠️⚠️⚠️
	Datendateiposition holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "194" ] ⚠️⚠️⚠️
	Datendateiposition setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "195" ] ⚠️⚠️⚠️
	Datendatei schließen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "196" ] ⚠️⚠️⚠️
	Datei löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "197" ] ⚠️⚠️⚠️
	Datei umbenennen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "199" ] ⚠️⚠️⚠️
	&lt;Unbekannt&gt; [198] ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "198" ] ⚠️⚠️⚠️
	Fehlerprotokollierung setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "200" ] ⚠️⚠️⚠️
	NFC-Erkennung konfigurieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "201" ] ⚠️⚠️⚠️
	Machine Learning-Modell konfigurieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "202" ] ⚠️⚠️⚠️
	FileMaker Data API ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "203" ] ⚠️⚠️⚠️
	# [OBSOLETE]  <unknown> [204]
	  Note:
	  206 = Commit Transaction
	  207 = Revert Transaction
	  but they are swapped here, so that the script is valid
	Transaktion öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "205" ] ⚠️⚠️⚠️
	Transaktion rückgängig ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "207" ] ⚠️⚠️⚠️
	Transaktion bestätigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "206" ] ⚠️⚠️⚠️
	Sitzungs-ID festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "208" ] ⚠️⚠️⚠️
	Wörterbuch festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "209" ] ⚠️⚠️⚠️
	# -> Watch this space :-) FM NEXT
Ende (wenn)
