tests/snapshots/scripts_sanitized/fmSyntaxColorizer/Example SyntaxColorizing - ID 46/All script steps sorted in English - ID 218.txt.snap
---
source: src/main.rs
expression: output_content
---
AVPlayer - Wiedergabe ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "177" ] ⚠️⚠️⚠️
AVPlayer - Optionen festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "179" ] ⚠️⚠️⚠️
AVPlayer-Wiedergabestatus festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "178" ] ⚠️⚠️⚠️
Konto hinzufügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "134" ] ⚠️⚠️⚠️
Fenster anpassen [ Wiederherstellen ]
Formatierungsleiste zulassen [ OFF ]
AnwenderAbbruchZulassen setzen [ OFF ]
Alle Fenster anordnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "120" ] ⚠️⚠️⚠️
Fehlerton
Passwort ändern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "83" ] ⚠️⚠️⚠️
Ganze Ergebnismenge prüfen
Aktuellen Datensatz prüfen
Nur Auswahl prüfen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "18" ] ⚠️⚠️⚠️
Löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "49" ] ⚠️⚠️⚠️
Datendatei schließen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "196" ] ⚠️⚠️⚠️
Datei schließen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "34" ] ⚠️⚠️⚠️
Popover schließen
Fenster schließen
Schreibe Änderung Datens./Abfrage [ Mit Dialog: ON ]
Lokale Benachrichtigung konfigurieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "187" ] ⚠️⚠️⚠️
Regionsmonitor-Script konfigurieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "185" ] ⚠️⚠️⚠️
Ergebnismenge einschränken
Datei konvertieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "139" ] ⚠️⚠️⚠️
Kopieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "47" ] ⚠️⚠️⚠️
Alle Datens./Abfragen kopieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "98" ] ⚠️⚠️⚠️
Datensatz/Abfrage kopieren
Wort korrigieren
Datendatei erstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "190" ] ⚠️⚠️⚠️
Ausschneiden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "46" ] ⚠️⚠️⚠️
Konto löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "135" ] ⚠️⚠️⚠️
Alle Datensätze löschen [ Mit Dialog: ON ]
Datei löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "197" ] ⚠️⚠️⚠️
Ausschnittreihe löschen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "104" ] ⚠️⚠️⚠️
Datensatz/Abfrage löschen [ Mit Dialog: ON ]
Telefonnummer wählen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "65" ] ⚠️⚠️⚠️
Datensatz/Abfrage duplizieren
Anwenderwörterbuch bearbeiten
Konto aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "137" ] ⚠️⚠️⚠️
Touch-Tastatur aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "174" ] ⚠️⚠️⚠️
Blätternmodus aktivieren [ Pause: OFF ]
Suchenmodus aktivieren [ Pause: OFF ]
Seitenansichtsmodus aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "41" ] ⚠️⚠️⚠️
SQL ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "117" ] ⚠️⚠️⚠️
Programm beenden
Aktuelles Script verlassen []
Exportiere alle Feldwerte ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "132" ] ⚠️⚠️⚠️
Datensätze exportieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "36" ] ⚠️⚠️⚠️
Ergebnismenge erweitern
Übereinst. Datensätze suchen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "155" ] ⚠️⚠️⚠️
Cache auf Platte ablegen
Fenster fixieren
Datendateiposition holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "194" ] ⚠️⚠️⚠️
Dateiexistenz holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "188" ] ⚠️⚠️⚠️
Dateigröße holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "189" ] ⚠️⚠️⚠️
Ordnerpfad holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "181" ] ⚠️⚠️⚠️
Gehe zu Feld []
Gehe zu Layout [ Layout: <Originallayout> ; Animation: Ohne ]
Gehe zu nächstem Feld
Gehe zu Objekt []
Gehe zu Ausschnittreihe [ Auswahl: ON ; Erste(r) ]
Gehe zu vorherigem Feld
Gehe zu Datens./Abfrage/Seite [ Erste(r) ]
Gehe zu Bezugsdatensatz ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "74" ] ⚠️⚠️⚠️
Alle Scripts abbrechen
Wenn [  ]
Sonst, wenn [  ]
Sonst
Ende (wenn)
Datensätze importieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "35" ] ⚠️⚠️⚠️
Audio/Video einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "159" ] ⚠️⚠️⚠️
Berechneten Wert einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "77" ] ⚠️⚠️⚠️
Systemdatum einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "13" ] ⚠️⚠️⚠️
Systemuhrzeit einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "14" ] ⚠️⚠️⚠️
Benutzernamen einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "60" ] ⚠️⚠️⚠️
Datei einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "131" ] ⚠️⚠️⚠️
PDF einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "158" ] ⚠️⚠️⚠️
Bild einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "56" ] ⚠️⚠️⚠️
Text einfügen [ Select ]
Von Gerät einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "161" ] ⚠️⚠️⚠️
Aus Index einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "11" ] ⚠️⚠️⚠️
Aus zuletzt geöffnetem Satz einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "12" ] ⚠️⚠️⚠️
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Menüset installieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "142" ] ⚠️⚠️⚠️
BeiTimer-Script installieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "148" ] ⚠️⚠️⚠️
Plugin-Datei installieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "157" ] ⚠️⚠️⚠️
Schleife (Anfang) [ Flush: Immer ]
	Verlasse Schleife wenn [  ]
Schleife (Ende)
Letzte Suche ändern
Fensterposition/-größe ändern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "119" ] ⚠️⚠️⚠️
Neue Datei
Neuer Datensatz/Abfrage
Neues Fenster [ Style: Dokument ; Layout: <Originallayout> ]
Mehrere ausschließen [ Mit Dialog: ON ]
Aktuellen Datens. ausschließen
Datendatei öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "191" ] ⚠️⚠️⚠️
Gespeicherte Suchen bearbeiten
Favoriten öffnen
Datei öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "33" ] ⚠️⚠️⚠️
Dateioptionen
Suchen/Ersetzen
Hilfe
Hosts öffnen
Container verwalten
Datenquellen verwalten
Datenbank verwalten
Layouts verwalten
Designs verwalten
Wertelisten verwalten
Einstellungen
Datensatz/Abfrage öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "133" ] ⚠️⚠️⚠️
Scriptarbeitsbereich öffnen
Sharing - FileMaker Netzwerk
Open Starter Solution ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "184" ] ⚠️⚠️⚠️
Transaktion öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "205" ] ⚠️⚠️⚠️
Transaktion bestätigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "206" ] ⚠️⚠️⚠️
URL öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "111" ] ⚠️⚠️⚠️
Auf Host hochladen
Einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "48" ] ⚠️⚠️⚠️
Scriptpause setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "62" ] ⚠️⚠️⚠️
AppleScript ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "67" ] ⚠️⚠️⚠️
Ergebnismenge suchen
Suchen/Ersetzen ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "128" ] ⚠️⚠️⚠️
Schnellsuche durchführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "150" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "" ]
Script auf Server ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "164" ] ⚠️⚠️⚠️
JavaScript in Web Viewer ausführen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "175" ] ⚠️⚠️⚠️
Drucken ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "43" ] ⚠️⚠️⚠️
Drucker einrichten ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "42" ] ⚠️⚠️⚠️
Erneut anmelden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "138" ] ⚠️⚠️⚠️
Von Datendatei lesen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "193" ] ⚠️⚠️⚠️
Datei wiederherstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "95" ] ⚠️⚠️⚠️
Objekt aktualisieren []
Ausschnitt aktualisieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "180" ] ⚠️⚠️⚠️
Fenster aktualisieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "80" ] ⚠️⚠️⚠️
Referenzwerte holen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "40" ] ⚠️⚠️⚠️
Datei umbenennen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "199" ] ⚠️⚠️⚠️
Ersetze alle Feldwerte [ Mit Dialog: ON ; Aktueller Inhalt ]
Kontopasswort zurücksetzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "136" ] ⚠️⚠️⚠️
Verwerfe Änderung Datens./Abfrage ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "51" ] ⚠️⚠️⚠️
Datensätze als Excel speichern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "143" ] ⚠️⚠️⚠️
Datensätze als PDF speichern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "144" ] ⚠️⚠️⚠️
Datensätze als Snapshot-Link speichern ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "152" ] ⚠️⚠️⚠️
Kopie speichern unter ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "37" ] ⚠️⚠️⚠️
Fenster rollen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "81" ] ⚠️⚠️⚠️
Alles auswählen
Wörterbücher wählen
Fenster aktivieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "123" ] ⚠️⚠️⚠️
DDE Execute senden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "64" ] ⚠️⚠️⚠️
Event senden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "57" ] ⚠️⚠️⚠️
E-Mail senden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "63" ] ⚠️⚠️⚠️
Datendateiposition setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "195" ] ⚠️⚠️⚠️
Wörterbuch festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "209" ] ⚠️⚠️⚠️
Fehleraufzeichnung setzen [ ON ]
Fehlerprotokollierung setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "200" ] ⚠️⚠️⚠️
Feldwert setzen [  ;  ]
Feld nach Namen einstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "147" ] ⚠️⚠️⚠️
Layoutobjekt-Animation festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "168" ] ⚠️⚠️⚠️
Netzwerkzugriff einstellen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "84" ] ⚠️⚠️⚠️
Nächste fortlaufende Nummer setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "116" ] ⚠️⚠️⚠️
Auswahl festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "130" ] ⚠️⚠️⚠️
Sitzungs-ID festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "208" ] ⚠️⚠️⚠️
SystemformateVerwenden setzen [ ON ]
Variable setzen [ $Command ; "whatever" ]
Web Viewer festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "146" ] ⚠️⚠️⚠️
Fenstertitel setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "124" ] ⚠️⚠️⚠️
Zoomstufe setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "97" ] ⚠️⚠️⚠️
Alle Datensätze anzeigen
Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
Nur Ausgeschlossene anzeigen
Menüleiste ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "166" ] ⚠️⚠️⚠️
Textlineal ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "92" ] ⚠️⚠️⚠️
Werkzeugleisten ein-/ausblenden ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "29" ] ⚠️⚠️⚠️
Sortieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "39" ] ⚠️⚠️⚠️
Datensätze nach Feld sortieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "154" ] ⚠️⚠️⚠️
Sprechen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "66" ] ⚠️⚠️⚠️
Dateioptionen - Rechtschreibung
Tabelle leeren [ Mit Dialog: ON ; <Aktuelle Tabelle> ]
Rückgängig/Wiederholen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "45" ] ⚠️⚠️⚠️
Sortierung aufheben
Datensätze zeigen als ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "30" ] ⚠️⚠️⚠️
In Datendatei schreiben ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "192" ] ⚠️⚠️⚠️
